--- a/angularclient/client/src/assets/css/results.sass
+++ b/angularclient/client/src/assets/css/results.sass
@@ -19,6 +19,7 @@
 		background-size: cover
 		background-position: center
 		cursor: pointer
+		vertical-align: top
 		.opacity-wrapper
 			height: 100%
 			padding: 10px
